2006-12-16	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/dialogs/overview.ui:
	unique names for labels which avoids uic-warnings

	* ica/src/isd_server.cpp:
	do not try to make a reverse-lookup on IPs when doing
	host-based-authentication

	* ica/Makefile.am:
	* ica/win32/win32vnc.cpp:
	* ica/win32/vncMenu.h:
	* ica/win32/src/*:
	integrated new sources from TightVNC 1.3.8

	* common/src/isd_connection.cpp:
	- self-written code for connecting to socket as Qt's
	  QAbstractSocket::connectToHost() does lot of extra stuff (ghost
	  connections etc) which also confuses the different servers sometimes
	- when doint authentication, check whether number of sec-types is
	  greater then zero and return (instead of crash) if so

2006-12-13	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* common/include/isd_connection.h:
	added NULL-check for m_socket in hasData()-method

2006-12-11	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* configure.in:
	made 1.0.0.0-rc1 release

	* utils-win32/userinfo.cpp:
	fixed crash when being called as local administrator

	* ima/src/main_window.cpp:
	bugfixes in mainWindow::changeGlobalClientMode( ... )

	* ima/src/client.cpp:
	decreased font-size for embedded information from 20 to 14

	* ima/src/snapshot_list.h:
	* ima/src/snapshot_list.cpp:
	* ima/dialogs/snapshots.ui:
	- completely revised snapshot-workspace using designer
	- when viewing snapshot, use scroll-area
	- preview etc. is now working again

2006-12-10	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/resources/de.ts:
	* ica/resources/de.qm:
	* ima/resources/de.ts:
	* ima/resources/de.qm:
	* setup/resources/de.ts:
	* setup/resources/de.qm:
	updated German localization

	* ima/src/client.cpp:
	- initialize m_classRoomItem with NULL - makes iTALC work with Qt 4.2.2
	- when constructing snapshot-filename, add directory *after* replacing
	  all occurences of ":" with "-" as this also replaces ":" in "X:\"