@@ -1,3 +1,15 @@
+2006-12-18	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
+
+	* ica/src/isd_server.cpp:
+	show access-confirmation-dialog in foreground
+
+	* ima/src/client_manager.cpp:
+	* ima/src/main_window.cpp:
+	save and restore state of main-window
+
+	* ima/src/client_manager.cpp:
+	always allow switching to overview-mode in changeGlobalClientMode()
+
 2006-12-16	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
 
 	* ima/dialogs/overview.ui:
